--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,18 +11,18 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "portfolio"
+  pageRef = "portfolio"
   weight = 10
 
 [[main]]
-  name = "Categories"
-  pageRef = "categories"
+  name = "etc"
+  pageRef = "etc"
   weight = 20
 
 [[main]]
-  name = "Tags"
-  pageRef = "tags"
+  name = "me"
+  pageRef = "me"
   weight = 30
 
 [[main]]
