--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -2,7 +2,7 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://jpanther.github.io/congo/docs/getting-started/
 
-#baseURL = "https://magg1e.github.io"
+baseURL = "https://magg1e.github.io"
 defaultContentLanguage = "en"
 languageCode = "en"
 
@@ -12,3 +12,5 @@ summaryLength = 0
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
+
+publishDir = "../docs"
